--- a/DV_HW/1_c_i/CMakeLists.txt
+++ b/DV_HW/1_c_i/CMakeLists.txt
@@ -3,5 +3,6 @@ project(DV_HW C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(DV_HW_1_c_i 1_c_i.c)
-add_executable(DV_HW_1_c_i_2 1_c_i_2.c)
+add_executable(DV_HW_1_c_i 1_c_i.c Linked_List.h)
+add_executable(DV_HW_1_c_i_2 1_c_i_2.c Linked_List.h)
+add_executable(DV_HW_1_c_i_3 1_c_i_3.c Linked_List.h)
