--- a/SchrodingerEq/Projects/Potencial/CMakeLists.txt
+++ b/SchrodingerEq/Projects/Potencial/CMakeLists.txt
@@ -3,4 +3,7 @@ project(Potencial)
 
 set(CMAKE_CXX_STANDARD 11)
 
+# added -fopenmp
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
+
 add_executable(Potencial main.cpp)
